--- a/src/app/cart/cart-view/cart-view.component.html
+++ b/src/app/cart/cart-view/cart-view.component.html
@@ -8,7 +8,13 @@
             </mat-list-item>
             <mat-list-item>
                 <span class="price" matListItemTitle>Total (INR)</span>
-                <span class="price" >{{ totalPrice | currency: "INR" }}</span>
+                <span class="price">{{ totalPrice | currency: "INR" }}</span>
+            </mat-list-item>
+            <mat-list-item class="text-right">
+                <button mat-flat-button (click)="clearCart()">Clear</button>
+            </mat-list-item>
+            <mat-list-item class="text-right">
+                <button mat-raised-button color="accent" (click)="checkout()">Checkout</button>
             </mat-list-item>
         </mat-list>
     </mat-card>
