--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -1,8 +1,17 @@
 <div class="container">
     <h2>Our latest collection</h2>
+    <mat-form-field>
+        <input matInput placeholder="Search for products" (keyup)="applyFilter($event)">
+    </mat-form-field>
+    <mat-form-field class="sort-dropdown">
+        <mat-select (selectionChange)="sortProducts($event.value)" placeholder="Sort by">
+            <mat-option value="priceLowHigh">Price: Low to High</mat-option>
+            <mat-option value="priceHighLow">Price: High to Low</mat-option>
+        </mat-select>
+    </mat-form-field>
     <div fxLayout="row wrap" fxLayoutGap="200px gird">
-        <div *ngFor="let product of products">
-            <mat-card class="product-card">
+        <div *ngFor="let product of filteredProducts">
+            <mat-card class="product-card" (click)="addToCart(product)">
                 <img mat-card-image src="assets/images/{{product.image_url}}">
                 <mat-card-content>
                     <mat-card-title>{{product.name}}</mat-card-title>
